--- a/index.html
+++ b/index.html
@@ -2,44 +2,46 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Dino SVG</title>
+  <title>Mars colonization structures</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Mars colonization structures</h1>
-  <ul>
-    <li>
-      <a href="#">
-        <i class="icon">
-          <svg><use xlink:href="images/mars-icons.svg#space-bubbles"></use></svg>
-        </i>
-      </a>
-      <h2>Space bubbles</h2>
-      <p>Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
-      <a href="#">Learn about space bubbles</a>
-    </li>
-    <li>
-      <a href="#">
-        <i class="icon">
-          <svg><use xlink:href="images/mars-icons.svg#super-dome"></use></svg>
-        </i>
-      </a>
-      <h2>Super domes</h2>
-      <p>Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
-      <a href="#">Learn about super domes</a>
-    </li>
-    <li>
-      <a href="#">
-        <i class="icon">
-          <svg><use xlink:href="images/mars-icons.svg#space-bubbles"></use></svg>
-        </i>
-      </a>
-      <h2>Mecha-stilts</h2>
-      <p>Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
-      <a href="#">Learn about mecha-stilts</a>
-    </li>
-  </ul>
+  <section>
+    <h1>Mars colonization structures</h1>
+    <ul>
+      <li>
+        <a href="#">
+          <i class="icon">
+            <svg><use xlink:href="images/mars-icons.svg#space-bubbles"></use></svg>
+          </i>
+        </a>
+        <h2>Space bubbles</h2>
+        <p>Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
+        <h3><a href="#">Learn about space bubbles</a></h3>
+      </li>
+      <li>
+        <a href="#">
+          <i class="icon">
+            <svg><use xlink:href="images/mars-icons.svg#super-dome"></use></svg>
+          </i>
+        </a>
+        <h2>Super domes</h2>
+        <p>Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
+        <h3><a href="#">Learn about super domes</a></h3>
+      </li>
+      <li>
+        <a href="#">
+          <i class="icon">
+            <svg><use xlink:href="images/mars-icons.svg#space-bubbles"></use></svg>
+          </i>
+        </a>
+        <h2>Mecha-stilts</h2>
+        <p>Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
+        <h3><a href="#">Learn about mecha-stilts</a></h3>
+      </li>
+    </ul>
+  </section>
 </body>
 </html>
