--- a/index.html
+++ b/index.html
@@ -10,38 +10,40 @@
 <body>
   <section>
     <h1>Mars colonization structures</h1>
-    <ul>
-      <li>
-        <a href="#">
-          <i class="icon">
-            <svg><use xlink:href="images/mars-icons.svg#space-bubbles"></use></svg>
-          </i>
-        </a>
-        <h2>Space bubbles</h2>
-        <p>Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
-        <h3><a href="#">Learn about space bubbles</a></h3>
-      </li>
-      <li>
-        <a href="#">
-          <i class="icon">
-            <svg><use xlink:href="images/mars-icons.svg#super-dome"></use></svg>
-          </i>
-        </a>
-        <h2>Super domes</h2>
-        <p>Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
-        <h3><a href="#">Learn about super domes</a></h3>
-      </li>
-      <li>
-        <a href="#">
-          <i class="icon">
-            <svg><use xlink:href="images/mars-icons.svg#space-bubbles"></use></svg>
-          </i>
-        </a>
-        <h2>Mecha-stilts</h2>
-        <p>Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
-        <h3><a href="#">Learn about mecha-stilts</a></h3>
-      </li>
-    </ul>
+    <div class="grid">
+      <ul>
+        <li>
+          <a href="#">
+            <i class="icon">
+              <svg><use xlink:href="images/mars-icons.svg#space-bubbles"></use></svg>
+            </i>
+          </a>
+          <h2>Space bubbles</h2>
+          <p>Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
+          <h3><a href="#">Learn about space bubbles</a></h3>
+        </li>
+        <li>
+          <a href="#">
+            <i class="icon">
+              <svg><use xlink:href="images/mars-icons.svg#super-dome"></use></svg>
+            </i>
+          </a>
+          <h2>Super domes</h2>
+          <p>Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
+          <h3><a href="#">Learn about super domes</a></h3>
+        </li>
+        <li>
+          <a href="#">
+            <i class="icon">
+              <svg><use xlink:href="images/mars-icons.svg#space-bubbles"></use></svg>
+            </i>
+          </a>
+          <h2>Mecha-stilts</h2>
+          <p>Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
+          <h3><a href="#">Learn about mecha-stilts</a></h3>
+        </li>
+      </ul>
+    </div>
   </section>
 </body>
 </html>
